add: 비어있을 경우 이모티콘 변경 및 숏컷 추가

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/alarm_tab_main.xml
@@ -19,10 +19,9 @@
 
         <ImageView
             android:id="@+id/emptyAlarmImageView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:tint="#D3D3D3"
-            app:srcCompat="@drawable/baseline_alarm_on_24" />
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:srcCompat="@drawable/no_alarm" />
 
         <TextView
             android:id="@+id/emptyAlarmTextView"
