--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_add.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_add.xml
@@ -1118,7 +1118,7 @@
                     android:backgroundTint="#E3F2C1"
                     android:fontFamily="@font/tmoney_bold"
                     android:includeFontPadding="false"
-                    android:text="결정이다!"
+                    android:text="확인하기"
                     android:textColor="#757863" />
 
                 <Space
