--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_today_condition.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_today_condition.xml
@@ -21,7 +21,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView34"
+                android:id="@+id/todayConditionTitle"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:fontFamily="@font/tmoney_bold"
@@ -29,14 +29,14 @@
                 android:includeFontPadding="false"
                 android:text="오늘 하루 어떠셨나요??"
                 android:textColor="#757863"
-                android:textSize="30sp" />
+                android:textSize="26sp" />
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
 
             <TextView
-                android:id="@+id/textView24"
+                android:id="@+id/todayConditionSubtitle"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:fontFamily="@font/tmoney_bold"
