--- a/frontend/EYAK(rev2)/app/src/main/res/layout/device_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/device_tab_main.xml
@@ -23,7 +23,7 @@
                 android:backgroundTint="#E3F2C1"
                 android:fontFamily="@font/tmoney_regular"
                 android:includeFontPadding="false"
-                android:text="뒤로 가기"
+                android:text="◀ 뒤로 가기"
                 android:textColor="#757863"
                 android:textSize="16sp" />
 
