--- a/frontend/EYAK(rev2)/app/src/main/res/layout/activity_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,15 @@
 
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/howtoImageInToolBar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginEnd="20dp"
+            android:src="@drawable/baseline_info_24"
+            android:tint="#757863" />
+
     </FrameLayout>
 
     <LinearLayout
